added script.js, added function for clock, working code to start clock at 90s and counting down

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 <body>
     <!-- Header Bar -->
     <header class="p-3 bg-dark text-white">
-        <a class="text-white bg-dark btn btn-dark" title="Click to go to biggest belly" href="highScores.html"
-            onclick="MyFunction();return false;"> <i class="fas fa-clipboard mr-2">
-            </i>High Scores</a>
-
-        <span id="timer" class="float-right mr-2"><i class="fas fa-stopwatch mr-2"></i>Time: 0:00</span>
+        <a class="text-white bg-dark btn btn-dark" title="Click to High Scores" href="highScores.html"
+            onclick="MyFunction();return false;"> <i class="fas fa-clipboard mr-2"></i>High Scores</a>
+        <span id="timer" class="float-right mr-2"><i class="fas fa-stopwatch mr-2"></i>Time : 00</span>
     </header>
 
     <!-- Home Screen -->
