timer is working, fixed logo animation.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,27 @@
         </div>
     </div>
 
+    <!-- Questions choices -->
+    <!-- <div class="container mt-5 d-none" id="quiz">
+        <div class="row justify-content-center mt-5 pt-3 pb-3">
+            <div class="col-10 col-lg-8" id="QA-block">
+                <h3 id="questions" class="mb-4">QUESTION</h3>
+                <ul id="answers" class="list-unstyled">
+                    <li class="answerChoice">A) </li>
+                    <li class="answerChoice">B) </li>
+                    <li class="answerChoice">C) </li>
+                    <li class="answerChoice">D) </li>
+                </ul>
+                <p class="feedback"></p>
+            </div>
+        </div>
+    </div> -->
+
 
 
     <!-- Optional JavaScript -->
     <script src="./script.js"></script>
+    <script src="./questions.js"></script>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
